--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               Transformez votre <span class="gradient-text">Corps</span> et
               votre <span class="gradient-text">Esprit</span>
             </h2> -->
-            <h2>
+            <h2 class="small-h2">
               Maîtrise l'art du coaching. Crée des entraînements qui
               <span class="gradient-text">transforment</span>, et un business
               qui <span class="gradient-text">décolle</span>.
@@ -237,8 +237,8 @@
                 <i class="fas fa-check"></i>
                 <div class="benefits-list-text">
                   <p>
-                    Accès à notre communauté privée de personnes partageant les
-                    mêmes objectifs
+                    Plus de confiance vis-à-vis de la pédagogie à adopter en
+                    coaching
                   </p>
                   <p class="benefits-list-text-secondary">
                     Apprends à expliquer clairement et efficacement chaque
@@ -281,7 +281,7 @@
           </div>
 
           <div class="benefits-card glass">
-            <h3>Sans accompagnement adapté</h3>
+            <h3>Sans notre formation</h3>
             <ul class="pain-points-list">
               <li>
                 <i class="fas fa-times"></i>
