--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
               votre <span class="gradient-text">Esprit</span>
             </h2> -->
             <h2 class="small-h2">
-              Maîtrise l'art du coaching. Crée des entraînements qui
+              Maîtrise l'art du coaching.
+              <!-- Maîtrise l'art du coaching. Crée des entraînements qui
               <span class="gradient-text">transforment</span>, et un business
-              qui <span class="gradient-text">décolle</span>.
+              qui <span class="gradient-text">décolle</span>. -->
             </h2>
             <!-- <p>
               Un coaching d'élite pour ceux qui exigent des résultats
